oriterm_core/tests/snapshots/vttest__120x40_01_cursor_03.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
************************************************************************************************************************
*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*
*+                                                                                                                    +*
A+                                                                                                                    +a
B                                                                                                                       
b                                                                                                                       
C                                                                                                                      c
D                                                                                                                      d
E                                                                                                                      e
F                                                                                                                       
f                                                                                                                       
G                                                                                                                      g
H                                                                                                                      h
I                                                                                                                      i
J                                                                                                                       
j                                                                                                                       
K                                                                                                                      k
L                                                                                                                      l
M                                                                                                                      m
N                                                                                                                       
n                                                                                                                       
O                                                                                                                      o
P                                                                                                                      p
Q                                                                                                                      q
R                                                                                                                       
r                                                                                                                       
S                                                                                                                      s
T                                                                                                                      t
U                                                                                                                      u
V                                                                                                                       
v                                                                                                                       
W                                                                                                                      w
X                                                                                                                      x
Y                                                                                                                      y
Z                                                                                                                       
z                                                                                                                       
                                                                                                                        
Push <RETURN>                                                                                                         +*
*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*
************************************************************************************************************************
