oriterm_core/tests/snapshots/vttest__120x40_01_cursor_04.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
************************************************************************************************************************
*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*
M                                                                                                                      m
N                                                                                                                       
n                                                                                                                       
O                                                                                                                      o
P                                                                                                                      p
Q                                                                                                                      q
R                                                                                                                       
r                                                                                                                       
S                                                                                                                      s
T                                                                                                                      t
U                                                                                                                      u
V                                                                                                                       
v                                                                                                                       
W                                                                                                                      w
X                                                                                                                      x
Y                                                                                                                      y
Z                                                                                                                       
z                                                                                                                       
                                                                                                                        
Push <RETURN>Test of autowrap, mixing control and print characters.                                                    *
The left/right margins should have letters in order:++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ *
************************************************************************************************************************
