oriterm_core/tests/snapshots/vttest__120x40_01_cursor_06.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
Test of leading zeros in ESC sequences.                                                                                 
Two lines below you should see the sentence "This is a correct sentence".                                               
                                                                                                                        
This is a correct sentence                                                                                              
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Push <RETURN>
