oriterm_core/tests/snapshots/vttest__120x40_02_screen_02.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
      *     *     *     *     *     *     *     *     *     *     *     *     *     *     *     *     *     *     *    *
      *     *     *     *     *     *     *     *     *     *     *     *     *     *     *     *     *     *     *     
*                                                                                                                       
Test of TAB setting/resetting. These two lines                                                                          
should look the same. Push <RETURN>
