oriterm_core/tests/snapshots/vttest__120x40_02_screen_03.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890
12345678901                                                                                                             
  This is 132 column mode, light background.                                                                            
   This is 132 column mode, light background.                                                                           
    This is 132 column mode, light background.                                                                          
     This is 132 column mode, light background.                                                                         
      This is 132 column mode, light background.                                                                        
       This is 132 column mode, light background.                                                                       
        This is 132 column mode, light background.                                                                      
         This is 132 column mode, light background.                                                                     
          This is 132 column mode, light background.                                                                    
           This is 132 column mode, light background.                                                                   
            This is 132 column mode, light background.                                                                  
             This is 132 column mode, light background.                                                                 
              This is 132 column mode, light background.                                                                
               This is 132 column mode, light background.                                                               
                This is 132 column mode, light background.                                                              
                 This is 132 column mode, light background.                                                             
                  This is 132 column mode, light background.                                                            
                   This is 132 column mode, light background.Push <RETURN>
