oriterm_core/tests/snapshots/vttest__120x40_02_screen_04.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789 
                                                                                                                        
  This is 120 column mode, light background.                                                                            
   This is 120 column mode, light background.                                                                           
    This is 120 column mode, light background.                                                                          
     This is 120 column mode, light background.                                                                         
      This is 120 column mode, light background.                                                                        
       This is 120 column mode, light background.                                                                       
        This is 120 column mode, light background.                                                                      
         This is 120 column mode, light background.                                                                     
          This is 120 column mode, light background.                                                                    
           This is 120 column mode, light background.                                                                   
            This is 120 column mode, light background.                                                                  
             This is 120 column mode, light background.                                                                 
              This is 120 column mode, light background.                                                                
               This is 120 column mode, light background.                                                               
                This is 120 column mode, light background.                                                              
                 This is 120 column mode, light background.                                                             
                  This is 120 column mode, light background.                                                            
                   This is 120 column mode, light background.Push <RETURN>
